# gitolize

./: Dockerfile  README.md  action.yml  gitolize.sh  run-tests.sh
.github/workflows/: tests.yml
examples/: gitignore-pulumi-state
tests/: init.sh  run.sh  test-00-smoke.sh  test-01-failure.sh  test-02-write.sh  test-03-concurrent-reads.sh  test-04-concurrent-writes.sh  test-05-custom-branch.sh  test-06-custom-git-directory.sh  test-06-custom-project.sh  test-07-custom-local-directory.sh  test-08-custom-message.sh  test-09-no-changes.sh  test-10-capture-stdio.sh  test-10-pulumi.sh  test-11-failure-write.sh  test-11-terraform.sh  test-12-branch-write-failure.sh  test-12-pulumi-stack-reference.sh  test-13-print-commit-sha.sh  test-13-terraform-remote.sh  test-50-pulumi.sh  test-51-pulumi-stack-reference.sh  test-60-terraform.sh  test-61-terraform-remote.sh
tests/test-10-pulumi-program/: __main__.py  pyproject.toml
tests/test-12-pulumi-program-a/: Pulumi.yaml  pyproject.toml
tests/test-12-pulumi-program-b/: Pulumi.yaml  pyproject.toml
tests/test-50-pulumi-program/: Pulumi.yaml  pyproject.toml
tests/test-51-pulumi-program-a/: __main__.py  pyproject.toml
tests/test-51-pulumi-program-b/: Pulumi.test.yaml  __main__.py  pyproject.toml
tests/test-60-terraform-configuration/: main.tf
tests/test-61-terraform-configuration-a/: main.tf
tests/test-61-terraform-configuration-b/: main.tf
